metadata/force-app/main/default/objects/CustomName_DIouN__c/CustomName_DIouN__c.object-meta.xml
<CustomObject>
    <description>Description_XwcDp</description>
    <label>CustomLabel_vuaJN</label>
    <nameField>
        <label>CustomLabel_vuaJN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_vuaJNs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>