metadata/force-app/main/default/objects/CustomName_DIouN__c/fields/CustomField_fYjAW__c.field-meta.xml
<CustomField>
    <fullName>CustomField_fYjAW__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldBxHQE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>