metadata/force-app/main/default/objects/CustomName_DIouN__c/fields/CustomField_qKGue__c.field-meta.xml
<CustomField>
    <fullName>CustomField_qKGue__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldWkBux</label>
    <length>255</length>
    <type>Text</type>
</CustomField>