metadata/force-app/main/default/objects/CustomName_DIouN__c/fields/CustomField_tAgPD__c.field-meta.xml
<CustomField>
    <fullName>CustomField_tAgPD__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldOKQAk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>